[package]
name = "tcf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tcf"
path = "src/bin/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.19.0"
regex = "1"
lazy_static = "1.4"
itertools = "0.10.5"
csv = "1.2.1"
edit-distance = "2.1.0"
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "4.0", features = ["derive"] }
time = "0.3.20"
lettre = "0.10.4"
pulldown-cmark = "0.9.3"
markdown_to_text = '1.0'
